rename some git actions